# module_live_telemetry

./: .gitignore  Cargo.toml
.omo/: boulder.json
.omo/plans/: replay-mock-telemetry.md
.omo/run-continuation/: ses_100dd790cffe8ngPWDKDxhOh5W.json  ses_115ac05c4ffeFNGwnqGC60wGgW.json  ses_11648d926ffe64UMwR054pEh6T.json  ses_1205505afffeqYYq7c1ItY1i7D.json  ses_13bceb9c6ffeYcOR051topcB0u.json
benches/: v2_benchmarks.rs
docs/: AUDIT_REPORT_2026-06-03.md  BINARY_TELEMETRY_DESIGN.md  DATA_PROTOCOL.md  RAW_TELEMETRY_FIELDS.md  binary-format-spec.md  computed_telemetry_logic.md
docs/acc-coach/: 2026-06-16-dashboard-display-performance-plan.md  2026-06-17-network-remote-dashboard-protocol-design.md  dashboard-architecture.md  live-telemetry-api-boundary.md
docs/api/: calculated-item.md  extract-lap-telemetry.md  extract-telemetry.md  import.md  lap-completed-callback.md  raw-item.md  recording.md
docs/audits/: 2026-06-06-computed-items.md  2026-06-09-post-b6f8436-audit.md
docs/format/: binary-design.md  binary-spec.md  lap-reading.md
scripts/: export.ps1  generate-mock.ps1  inspect.ps1  raw-lap-segments.ps1  record-auto.ps1
src/: distributor.rs  encode_v2.rs  error.rs  format.rs  format_v2.rs  item_key.rs  laps.rs  lib.rs  mmap_win.rs  mock.rs  raw_catalog.rs  raw_writer.rs  reader.rs  reader_v2.rs  shmem.rs  trackmap.rs  types.rs  writer.rs  writer_v2.rs
tests/: acctlm_converter_test.rs  binary_roundtrip.rs  compute_tests.rs  dashboard_tests.rs  deep_compare.rs  raw_lap_segments.rs  replay_manual_qa.rs  test_data.rs  v2_edge_cases.rs  v2_roundtrip.rs
(+84 files in other folders)
