[package]
name = "module_live_telemetry"
version = "0.1.0"
edition = "2021"

[lib]
name = "module_live_telemetry"
path = "src/lib.rs"

[[bin]]
name = "acc-live-telemetry"
path = "src/bin/acc-live-telemetry.rs"

[[bin]]
name = "acctlm-to-acctlm2"
path = "src/bin/acctlm-to-acctlm2.rs"

[dependencies]
crossbeam-channel = "0.5"
crc32fast = "1"
ctrlc = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
memmap2 = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "v2_benchmarks"
harness = false

[features]
v2_writer = []
